Added more intro text.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.21 2009/08/01 16:03:06 ith Exp $
+% $Id: dbi-intro.tex,v 1.22 2009/08/01 22:13:18 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.21 2009/08/01 16:03:06 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.22 2009/08/01 22:13:18 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -106,34 +106,34 @@ scenarios which permit observational tensor signals.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Branes and extra dimensions}
+\section{String theory and extra dimensions}
 \label{sec:extradims}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-Unifcation of seemingly disparate theories has been a driving force in
-theoretical physis for more than 100 years. This effort culminated in the
+Unification of seemingly disparate theories has been a driving force in
+theoretical physics for more than 100 years. This effort culminated in the
 Standard Model (SM) of particle physics which unifies three of the four
-fundamental forces in a robust theoretical framework. Since the realisation of
-the SM a clear goal of theoretical phsyics has been the unification of the
+fundamental forces in a robust theoretical framework. Since the realization of
+the SM a clear goal of theoretical physics has been the unification of the
 final force, gravity, into this framework.
 
 
 String theory is one of the most successful attempts to achieve this
 unification. According to this theory, the fundamental building blocks of the
-universe are vibrating bunles of energy. These ``strings'', and their analogues
+universe are vibrating bundles of energy. These ``strings'', and their analogues
 in other dimensions, constitute all matter and force particles in existence.
 The physics of their interactions dictates the physics of the SM which has been
-so successfully tested experimentally.
+so successfully tested.
 
-This at least is the goal of the string theory project but the coimplex nature
+This at least is the goal of the string theory project but the complex nature
 of the mathematical and physical structures involved means that no single
 well-defined theory can claim to have achieved this goal. Indeed many different
 string theories have been discovered. This might appear to be a significant
 set-back in the attempt to find a single unifying theory. 
 
 However, these different theories are linked in pairs by a process called
-``duality'', Physical descriptions in one theory can be translated into the
+``duality''. Physical descriptions in one theory can be translated into the
 dual description in the other. The dual version often exhibits properties that
 are useful for solving problems in the original setting.
 These dualities have demonstrated the existence of an underlying theory of
@@ -147,6 +147,27 @@ experience. Recovering the physics of our familiar $3+1$ dimensional universe
 clearly requires that these extra dimensions be hidden in some way. How this is
 achieved is one of the signature features of any complete string theoretical
 description of the universe.
+
+\subsection{Cosmology and String Theory}
+Temperatures in the early univerese were far in excess of those attainable by
+any earth-bound particle accelerator. Hence a stringent test of any high energy
+theory is whether it predicts the same properties of the early universe that are
+now being observed in the CMB and elsewhere.
+For this reason any string theory description of the universe must include a
+consistent cosmological narrative. 
+
+In Chapter \ref{ch:introduction} inflation was put forward as the leading
+explanation of the early development of the universe. For string theory to be
+a consistent framework in the inflationary paradigm it must produce a period of
+inflationary expansion. Inflation requires the input of physics beyond the SM
+for its existence. Although usually described by SM scalar fields, there is no
+inherent reason for the existence of such inflaton fields in the SM. Higher
+energy theories such as string theory could provide an explanation for the
+existence of inflaton fields. In this way inflation and string theory are
+ideal partners and it is natural to consider them together when investigating
+the early universe.
+
+
 
 \subsection{Extra dimensions}
 One of the basics results of string theory is that the 3 spacial dimensions that we see
