--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.22 2009/07/30 11:18:28 ith Exp $
+% $Id: thesis.tex,v 1.23 2009/08/03 19:48:41 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 % twoside,
@@ -17,7 +17,7 @@ onehalfspacing % onehalfspacing or doublespacing
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % My formatting package
 % CVSon for cvs revision number in footers
-% CVSoff is default
+% CVSoff is default-
 \usepackage[CVSon, % CVS version in footers
             labels, % show labels
 	    todos, % show todos
@@ -25,7 +25,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.22 2009/07/30 11:18:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.23 2009/08/03 19:48:41 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
