--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.24 2009/08/03 19:48:32 ith Exp $
+% $Id: dbi-intro.tex,v 1.25 2009/08/04 11:22:10 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.24 2009/08/03 19:48:32 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.25 2009/08/04 11:22:10 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -250,20 +250,59 @@ will now be a non-zero integer.
 
 
 \subsection{D-branes}
-Open string + T-duality = Dirichlet boundary conditions
+% Open string + T-duality = Dirichlet boundary conditions
+% 
+% Mixed Dirichlet and von Neumann boundary conditions.
+% 
+% D-p branes, open strings end on p+1 ? dimensional manifold.
+% 
+% For Type IIB we have D-1,3,5,7 branes
+% 
+% See Johnson p80 for D-brane action.
+% 
+% Brane inflation was first considered without moduli stabilization (pg21
+% Douglas
+% and Kachru for refs). This gave a potential similar to hybrid inflation with
+% waterfall field. KKLMMT argued that the corrections from including moduli
+% stabilization were too big to ignore.
+Despite using string theory we will not be dealing with strings themselves.
+Instead we will consider the dynamics of extended objects known as branes and
+in particular we will use Dirichlet- or D-branes. As mentioned above string
+theories are linked by T-duality. Fundamental parameters are translated by the
+duality including the size of the extra-dimensions, the string coupling and the
+coordinate solutions of the strings.
 
-Mixed Dirichlet and von Neumann boundary conditions.
+% T-Duality
+Suppose we have a string theory compactified on a circle of radius $R$. Instead
+of being a continuum, the momentuum of a closed string takes discrete values
+$n/R$ for $n \in \mathbb{Z}$. This is a KK tower of massive states. As we
+complete a circuit around the compact dimension, the value of the coordinate
+function embedding the string in the background will also increase by $2\pi w
+R$ for $w \in \mathbb{Z}$. Here $w$ is called the winding number of the string.
 
-D-p branes, open strings end on p+1 ? dimensional manifold.
+The total mass of the string contains terms with both the KK tower of states
+and the new tower of winding states:
+\begin{equation}
+\label{eq:closedmass-dbiintro}
+ M^2 = \frac{n^2}{R^2} + \frac{w^2 R^2}{\alpha'^2} + \cdots\,.
+\end{equation}
+If $R$ is taken to infinity the $w\ne 0$ states become infinitely massive and
+only the $w=0$ state is left with a continuum of momentum values. Thus the
+uncompactified result is recovered. However if $R\rightarrow0$ the $n\ne 0$
+states are now infinitely massive as in the standard KK picture. Unlike that
+scenario, there is now a continuum of winding states $w\ne 0$, again giving an
+uncompactified dimension. This major departure from the standard
+compactification result is a purely stringy effect. 
 
-For Type IIB we have D-1,3,5,7 branes
-
-See Johnson p80 for D-brane action.
-
-Brane inflation was first considered without moduli stabilization (pg21 Douglas
-and Kachru for refs). This gave a potential similar to hybrid inflation with
-waterfall field. KKLMMT argued that the corrections from including moduli
-stabilization were too big to ignore.
+The formula for the mass spectrum, \eq{eq:closedmass-dbiintro}, is invariant
+when $n$ and $w$ are exchanged given the transformation
+\begin{equation}
+ R \rightarrow R' = \frac{\alpha'}{R}\,.
+\end{equation}
+The new trhory which is compactified on a circle of radius $R'$ is known as the
+T-dual theory and the transformation is called T-duality. THe two theories,
+original and T-dual, are physically identical; T-duality is an exact symmetry
+of string theory for closed strings.
 
 
 
